Local NTP tests: Wait for TemplateURLService to load before using it

This might have been a cause of flakiness in these tests.

Bug: 791969
Change-Id: I58d66ef67cd708c18fb902310c63aec29ea057b9
Reviewed-on: https://chromium-review.googlesource.com/814516
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522739}
Former-commit-id: 71d761879bc76e7902d315c55ec0b9492dab0058